[gd_scene load_steps=14 format=4 uid="uid://b5cnnwjdprlnn"]

[ext_resource type="PackedScene" uid="uid://b2a6p8rxv1igu" path="res://tscn_files/medeina.tscn" id="1_0sq2h"]
[ext_resource type="TileSet" uid="uid://ddyvtxsbruqrl" path="res://Game_Sprites/Tilemaps/nature_area.tres" id="1_exbw0"]
[ext_resource type="Script" path="res://Scripts/boss_level_medeina.gd" id="1_rpm1e"]
[ext_resource type="PackedScene" uid="uid://cm5io1eqsih0u" path="res://tscn_files/level_switcher.tscn" id="2_2jj0m"]
[ext_resource type="Texture2D" uid="uid://h5l7448alyq3" path="res://Game_Sprites/Background/Background_symbol_Nature_God.png" id="2_52021"]
[ext_resource type="PackedScene" uid="uid://cbk23murpdmn1" path="res://tscn_files/spawn_area.tscn" id="3_xwv45"]
[ext_resource type="PackedScene" uid="uid://bo5x65xs813fn" path="res://tscn_files/main_character.tscn" id="4_pj58x"]
[ext_resource type="PackedScene" uid="uid://1okjlshefdnc" path="res://tscn_files/tree_sun_blocker.tscn" id="7_7kh2i"]
[ext_resource type="Texture2D" uid="uid://dtodxhauyfcv8" path="res://Sprites/Bosses/Screenshot (446).png" id="9_ipfqr"]

[sub_resource type="Animation" id="Animation_7rnif"]
resource_name = "Fade_to_dark"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.0475577, 0.0475576, 0.0475576, 1)]
}

[sub_resource type="Animation" id="Animation_kymck"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_r5yo4"]
resource_name = "Remove_dark"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0687983, 0.0687983, 0.0687983, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s3q2n"]
_data = {
"Fade_to_dark": SubResource("Animation_7rnif"),
"RESET": SubResource("Animation_kymck"),
"Remove_dark": SubResource("Animation_r5yo4")
}

[node name="Level" type="Node2D"]
script = ExtResource("1_rpm1e")

[node name="BG" type="ColorRect" parent="."]
offset_left = 3.0
offset_top = 32.0
offset_right = 2031.0
offset_bottom = 1170.0
color = Color(0.174434, 0.19641, 0.193237, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1032, 563)
texture = ExtResource("2_52021")

[node name="MainCharacter" parent="." instance=ExtResource("4_pj58x")]
position = Vector2(1369, 967)

[node name="SpawnArea" parent="." instance=ExtResource("3_xwv45")]
position = Vector2(1289, 1067)
correctLevel = "starting_level"

[node name="LevelSwitcher" parent="." instance=ExtResource("2_2jj0m")]
position = Vector2(2074, 555)
nextLevel = "starting_level"

[node name="Medeina" parent="." instance=ExtResource("1_0sq2h")]
position = Vector2(1022, 563)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2(18, 43)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s3q2n")
}

[node name="TreeSunBlocker" parent="." instance=ExtResource("7_7kh2i")]
visible = false
position = Vector2(1547, 300)
rotation = 1.5708
collision_layer = 0

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(0.5, 0.5)
tile_map_data = PackedByteArray("AAAAAAEAAgAJAAEABAAAAAAAAgAIAAMAAgABAAAAAgAKAAAACwACAAAAAgAKAAIAAAADAAAAAgAKAAAACwAEAAAAAgAKAAAACgAFAAAAAgAKAAAACgAGAAAAAgAKAAAACwAHAAAAAgAKAAAACwAIAAAAAgAKAAIAAgAJAAAAAgAKAAIAAAAKAAAAAgAKAAIAAgALAAAAAgAKAAAACgAMAAAAAgAKAAIAAAANAAAAAgAKAAIAAAAOAAAAAgAKAAIAAgAPAAAAAgAKAAIAAAAQAAAAAgAKAAIAAAARAAAAAgAKAAAACwASAAAAAgAKAAAACwATAAAAAgAKAAIAAgAUAAAAAgAKAAIAAgAVAAAAAgAKAAIAAgAWAAAAAgAKAAIAAAAXAAAAAgAKAAIAAgAYAAAAAgAKAAAACgAZAAAAAgAKAAIAAAAaAAAAAgAKAAAACgAbAAAAAgAKAAAACwAcAAAAAgAKAAAACgAdAAAAAgAKAAMAAQAeAAAAAgAKAAEAAgAeAAEAAgAKAAEAAAAdAAEAAgAJAAEAAwAdAAIAAgAJAAEAAwAdAAMAAgAJAAAAAgAeAAMAAgALAAMAAAAeAAQAAgALAAEACAAeAAUAAgALAAEACAAeAAYAAgAJAAEAAwAeAAcAAgAHAAEAAQAeAAgAAgAAAAEAAgAeAAkAAgADAAEAAwAeAAoAAgAJAAEAAgAeAAsAAgAKAAMAAgAeAAwAAgAKAAEAAwAeAA0AAgAKAAEAAQAdAA0AAgAKAAEAAAADAA8AAgAKAAIAAgACAA8AAgAKAAAACgABAA8AAgAIAAMAAgAAAA8AAgAKAAEAAgAAAA4AAgAKAAEAAAD//w0AAgAKAAEAAQD//wwAAgAKAAEAAgD//wsAAgAKAAEAAgD//woAAgAKAAEAAgD+/wkAAgAKAAEAAQD+/wgAAgAKAAEAAwD+/wcAAgAKAAEAAQD+/wYAAgAKAAEAAQD+/wUAAgAKAAEAAAD+/wQAAgAKAAEAAAD+/wMAAgAKAAEAAQD//wMAAgAKAAEAAQD//wIAAgAKAAEAAQD//wEAAgAKAAEAAAAAAAIAAgALAAEABwAAAAMAAgAJAAEAAgAAAAQAAgALAAEAAAAAAAUAAgALAAEABwAAAAYAAgALAAEABwAAAAcAAgALAAEAAAAAAAgAAgAJAAEABAAAAAkAAgAIAAMAAAAAAAoAAgAKAAEAAgAAAAsAAgAKAAEAAgAAAAwAAgAKAAEAAAABAAwAAgAKAAEAAQABAA0AAgAKAAEAAAABAA4AAgAKAAEAAQAAAA0AAgAKAAEAAgACAA4AAgAKAAEAAwADAA4AAgAKAAEAAgABABAAAgALAAEABwAAABAAAgAKAAEAAAD//w8AAgAKAAEAAgD+/w8AAgAKAAEAAgD+/xAAAgAKAAEAAgD//xAAAgAKAAEAAgADABEAAgAKAAIAAwAEABEAAgAKAAIABAAFABEAAgAKAAAACAAGABEAAgAKAAIAAwAHABEAAgAKAAIABAAIABEAAgAKAAIABAAJABEAAgAKAAIABAAKABEAAgAKAAAACAALABEAAgAKAAIABAAMABIAAgAKAAEAAAANABIAAgAKAAEAAgAOABIAAgAKAAEAAgAPABIAAgAKAAEAAAAQABIAAgAKAAEAAQARABIAAgAKAAEAAwASABIAAgAKAAEAAwATABIAAgAKAAEAAAAVABIAAgAKAAEAAAAUABIAAgAKAAEAAgAWABIAAgAKAAEAAQAXABIAAgAKAAEAAwAYABIAAgAKAAEAAwAZABIAAgAKAAEAAAAaABIAAgAKAAEAAgAbABIAAgAKAAEAAwAcABIAAgAKAAEAAgAdABIAAgAKAAEAAAAeABIAAgAKAAEAAQAfABIAAgAKAAEAAAAdABEAAgAJAAMAAAAcABEAAgAKAAAACAAaABEAAgAKAAIAAwAbABEAAgAKAAIAAwAZABEAAgAKAAAACAAXABEAAgAKAAIAAwAYABEAAgAKAAIAAwAWABEAAgAKAAIAAwAUABEAAgAKAAIABAAVABEAAgAKAAAAAAATABEAAgAKAAIABAASABEAAgAKAAAACAARABEAAgAKAAAAAAAQABEAAgAKAAAAAAAPABEAAgAKAAIABAAOABEAAgAKAAIABAANABEAAgAKAAIAAwAMABEAAgAKAAIABAACABEAAgAKAAIABAABABEAAgAIAAAAAAAAABEAAgAKAAIAAgD//xEAAgAKAAAACgD+/xEAAgAKAAAACwD9/xEAAgADAAEAAAAGABIAAgAKAAEAAgAHABIAAgAKAAEAAgAJABIAAgAKAAEAAgAIABIAAgAKAAEAAAAKABIAAgAKAAEAAgALABIAAgAKAAEAAAAiABEAAgAKAAEAAwAiABAAAgAKAAEAAgAiAA8AAgAKAAEAAAAiAA4AAgAKAAEAAwAhAA0AAgAKAAEAAAAhAAwAAgAKAAEAAAAhAAsAAgAKAAIABAAhAAYAAgAKAAEAAAAhAAUAAgALAAMAAwAhAAQAAgALAAEABwAhAAMAAgALAAEAAAAhAAIAAgALAAEAAAAhAAEAAgALAAEAAAAgAAEAAgAKAAEAAQAfAAEAAgAKAAEAAgAeAAIAAgAKAAEAAQAfAAIAAgAKAAEAAAAgAAIAAgAKAAEAAgAgAAMAAgAKAAEAAQAfAAQAAgAKAAEAAgAfAAsAAgAKAAIABAAfAAwAAgAKAAEAAAAfAA0AAgAKAAEAAQAgAAwAAgAKAAEAAgAgAAYAAgAKAAEAAwAgAAUAAgAKAAEAAQAgAAQAAgAKAAEAAQAfAAMAAgAKAAEAAgAfAAUAAgAKAAEAAQAhAA4AAgAKAAEAAQAgAA0AAgAKAAEAAgAfAAYAAgAKAAEAAgD//wQAAgAKAAEAAwD//wUAAgAKAAEAAgD//wYAAgAKAAEAAAD//wcAAgAKAAEAAQD//wgAAgAKAAEAAgD//w4AAgAKAAEAAQD+/woAAgAKAAEAAwD+/wsAAgAKAAEAAwD+/wwAAgAKAAEAAwD//wkAAgAKAAEAAQD+/w0AAgAKAAEAAgD+/w4AAgAKAAEAAgD9/w8AAgAJAAEAAAD9/w4AAgALAAEABgD9/w0AAgALAAEABgD9/wwAAgALAAEABgD8/woAAgAJAAEAAwD9/wsAAgAKAAMAAQD8/wkAAgAJAAEAAwD8/wgAAgALAAEABgD8/wYAAgALAAEABgD8/wcAAgALAAEACAD8/wUAAgALAAEACAD8/wQAAgAJAAMABAD9/wQAAgAKAAEAAwD9/wMAAgAKAAEAAgD9/wIAAgAKAAEAAwD+/wIAAgAKAAEAAQD+/wEAAgAKAAEAAQD9/wUAAgAKAAEAAgD9/wYAAgAKAAEAAwD9/wcAAgAKAAEAAQD9/wgAAgAKAAEAAgD9/wkAAgAKAAEAAgD8/wsAAgAJAAAAAgD9/woAAgAKAAEAAwD//wAAAgAKAAEAAQD/////AgAKAAEAAQAAAP//AgAKAAEAAAAAAP7/AgAKAAEAAQABAP7/AgAKAAEAAQACAP7/AgAKAAEAAgADAP//AgAKAAEAAAAEAP//AgAKAAEAAAAFAP//AgAKAAEAAAAGAP//AgAKAAEAAgAHAP//AgAKAAEAAgAIAP//AgAKAAEAAgAJAP//AgAKAAEAAQACAP//AgAKAAEAAgABAP//AgAKAAEAAwAKAP//AgAKAAEAAAALAP//AgAKAAEAAAAMAP//AgAKAAEAAwANAP//AgAKAAEAAwAOAP//AgAKAAEAAQAQAP//AgAKAAEAAgAPAP//AgAKAAEAAwARAP//AgAKAAEAAwASAP//AgAKAAEAAAATAP//AgAKAAEAAgAUAP//AgAKAAEAAQAVAP//AgAKAAEAAgAWAP//AgAKAAEAAwAXAP//AgAKAAEAAwAYAP//AgAKAAEAAgAZAP//AgAKAAEAAgAaAP//AgAKAAEAAQAbAP//AgAKAAEAAAAcAP//AgAKAAEAAwAdAP//AgAKAAEAAQAeAP//AgAKAAEAAwAfAP//AgAKAAEAAgAgAP//AgAKAAEAAAAhAP//AgAJAAEABAAhAAAAAgALAAEABwAgAAAAAgAKAAEAAgAfAAAAAgAKAAEAAQAeAP7/AgAKAAEAAAAdAP7/AgAKAAEAAAAcAP7/AgAKAAEAAgAbAP7/AgAKAAEAAgAaAP7/AgAKAAEAAAAZAP7/AgAKAAEAAwAYAP7/AgAKAAEAAAAXAP7/AgAKAAEAAQAWAP7/AgAKAAEAAAAVAP7/AgAKAAEAAAAUAP7/AgAKAAEAAQATAP7/AgAKAAEAAAASAP7/AgAKAAEAAAARAP7/AgAKAAEAAAAQAP7/AgAKAAEAAgAPAP7/AgAKAAEAAgAOAP7/AgAKAAEAAAANAP7/AgAKAAEAAQAMAP7/AgAKAAEAAAALAP7/AgAKAAEAAAAKAP7/AgAKAAEAAAAJAP7/AgAKAAEAAwAIAP7/AgAKAAEAAwAHAP7/AgAKAAEAAwAGAP7/AgAKAAEAAAAFAP7/AgAKAAEAAAAEAP7/AgAKAAEAAQADAP7/AgAKAAEAAAD///7/AgAKAAEAAwD///3/AgAKAAAACAAAAP3/AgAKAAAACAABAP3/AgAKAAAACAACAP3/AgAKAAIAAwADAP3/AgAKAAAACAAEAP3/AgAKAAIABAAFAP3/AgAKAAIAAwAGAP3/AgAKAAIABAAHAP3/AgAKAAIABAAIAP3/AgAKAAIABAAJAP3/AgAKAAIABAAKAP3/AgAKAAAACAALAP3/AgAKAAAAAAAMAP3/AgAKAAIAAwANAP3/AgAKAAIABAAPAP3/AgAKAAAAAAAOAP3/AgAKAAIAAwAQAP3/AgAKAAAAAAARAP3/AgAKAAAAAAASAP3/AgAKAAAAAAATAP3/AgAKAAIABAAUAP3/AgAKAAIAAwAVAP3/AgAKAAIAAwAWAP3/AgAKAAAACAAXAP3/AgAKAAIABAAYAP3/AgAKAAIABAAZAP3/AgAKAAAAAAAaAP3/AgAKAAAAAAAbAP3/AgAKAAIABAAcAP3/AgAKAAAAAAAdAP3/AgAKAAIAAwAeAP3/AgAKAAAACAAfAP3/AgAKAAAAAAAgAP3/AgAKAAIAAwAhAP3/AgALAAAAAAAhAP7/AgAJAAEABAAgAP7/AgAKAAEAAwAfAP7/AgAKAAEAAQD+//7/AgAKAAEAAAD9//7/AgAKAAEAAgD8//7/AgAKAAMAAwD7//7/AgALAAAAAQD7////AgAJAAEAAAD8////AgAKAAEAAgD+//3/AgAKAAIABAD9//3/AgAKAAIABAD8//3/AgALAAAAAQD7/wAAAgALAAEACAD8/wEAAgAKAAEAAgD8/wIAAgAKAAEAAwD8/wMAAgAKAAEAAAD8/wAAAgAKAAEAAgD9////AgAKAAEAAgD+////AgAKAAEAAQD+/wAAAgAKAAEAAwD9/wEAAgAKAAEAAgD9/wAAAgAKAAEAAgD7/wEAAgAJAAEAAAD7/wIAAgALAAEACAD7/wMAAgALAAEABgD7/wQAAgAJAAIAAAD9/xAAAgAJAAEAAAD9/xIAAgAAAAEAAAD9/xMAAgAAAAAAAwAcAAwAAgAKAAEAAQAdAAwAAgAKAAEAAwAMAAgAAgALAAEABgANAAgAAgALAAEAAAASAAgAAgALAAEACAATAAgAAgALAAEAAAAgABIAAgAKAAEAAgAhABIAAgAKAAEAAAAiABIAAgAKAAEAAQAjABIAAgAJAAEABAAjAA8AAgAJAAEAAgAjABAAAgAJAAEAAgAjABEAAgALAAEAAAAjABMAAgALAAAAAgAiABMAAgAKAAIAAAAhABMAAgAKAAIAAgAgABMAAgAKAAAACwAfABMAAgAKAAIAAAAeABMAAgAKAAAACwAdABMAAgAKAAIAAAAcABMAAgAKAAAACgAbABMAAgAKAAAACwAaABMAAgAKAAIAAAAZABMAAgALAAMAAQAZABQAAgAJAAIAAQAYABQAAgAKAAIAAAAXABQAAgAKAAIAAgAWABQAAgAKAAIAAAAVABQAAgAKAAAACwAUABQAAgAKAAAACwATABQAAgAKAAIAAAASABQAAgAKAAAACwASABMAAgAKAAEAAAAYABMAAgAKAAEAAAAXABMAAgAKAAEAAwAWABMAAgAKAAEAAAAVABMAAgAKAAEAAQAUABMAAgAKAAEAAgATABMAAgAKAAEAAgARABMAAgAKAAEAAwAPABMAAgAKAAEAAQAQABMAAgAKAAEAAgAOABMAAgAKAAEAAgANABMAAgAKAAEAAAAMABMAAgAKAAEAAQALABMAAgAKAAEAAQAKABMAAgAKAAEAAQAJABMAAgAKAAEAAgAIABMAAgAKAAEAAgAgAA4AAgAKAAEAAQAhAA8AAgAKAAEAAwAjAA4AAgALAAEAAAAjAA0AAgAJAAEAAgAiAA0AAgAKAAEAAAAiAAwAAgAKAAEAAQAjAAwAAgAJAAEABAAbAA4AAgAKAAEAAQAcAA0AAgAKAAEAAgAbAA8AAgAKAAAACgAcAA4AAgAKAAEAAQAcAA8AAgAKAAIAAAAdAA4AAgAKAAEAAAAiAAsAAgAKAAAAAAAgAAsAAgAKAAIABAAjAAsAAgAFAAEAAgAkAAsAAgABAAMAAQAlAAsAAgAFAAMAAAAmAAsAAgACAAMAAAAiAAUAAgAKAAIAAwAjAAYAAgAIAAMAAAAkAAYAAgAKAAAACAAlAAYAAgAKAAIABAAmAAYAAgAKAAIABAAnAAYAAgALAAAAAAAjAAUAAgALAAAAAAAiAAYAAgAKAAEAAQAfAAcAAgAKAAIAAgAgAAcAAgAKAAIAAgAlAAcAAgAEAAEAAAAmAAcAAgAKAAIAAgAnAAcAAgAJAAAAAwAkAAcAAgAKAAAACgAjAAcAAgAKAAAACwAiAAcAAgAKAAAACgAhAAcAAgAKAAAACwAfAA4AAgAKAAEAAQAeAA4AAgAKAAEAAAAeAA8AAgAKAAEAAwAdAA8AAgAJAAMABAAfAA8AAgAKAAEAAQAgAA8AAgAKAAEAAgAfABAAAgAKAAEAAAAeABEAAgAKAAEAAQAgABAAAgAKAAEAAQAhABAAAgAKAAEAAAAgABEAAgAKAAEAAAAfABEAAgAKAAEAAQAhABEAAgAKAAEAAAAlAAgAAgAAAAEAAgAlAAkAAgAAAAEAAwAlAAoAAgAAAAEAAQAMAAcAAgALAAAAAQANAAcAAgAHAAEAAgANAAYAAgAAAAEAAwANAAUAAgAAAAEAAgANAAQAAgAAAAAAAQATAAcAAgALAAAAAAASAAcAAgADAAAAAAASAAYAAgAAAAEAAAASAAUAAgAAAAEAAAASAAQAAgAAAAIAAwADABIAAgAKAAEAAwAEABIAAgAKAAEAAAAFABIAAgAKAAEAAAARABQAAgAKAAIAAgAQABQAAgAKAAIAAAAPABQAAgAKAAIAAgAOABQAAgAKAAIAAgANABQAAgAKAAIAAgAMABQAAgAKAAIAAgALABQAAgAKAAIAAAAKABQAAgAKAAAACwAHABMAAgAKAAEAAAAGABMAAgAKAAEAAwAFABMAAgALAAMAAAAEABMAAgAKAAIAAgADABMAAgAKAAAACgAGABQAAgAKAAAACwAHABQAAgAKAAAACwAIABQAAgAKAAAACwAJABQAAgAKAAIAAgACABIAAgAJAAMABAABABIAAgAJAAIAAAACABMAAgAJAAAAAgAFABQAAgALAAAAAwAbAAwAAgAKAAEAAgAbAA0AAgAKAAEAAQACAAwAAgAKAAEAAAACAA0AAgAKAAEAAAADAA0AAgAKAAEAAQADAAwAAgAKAAEAAgAeABAAAgAKAAEAAgAEAAwAAgAJAAEAAgAEAA0AAgALAAEAAAAEAA4AAgALAAEABwAEAA8AAgALAAIAAAAaAAwAAgAJAAEAAAAaAA0AAgALAAEACAAaAA4AAgAJAAEAAAAaAA8AAgALAAIAAQAEAAsAAgALAAEABwADAAsAAgAKAAEAAwACAAsAAgAKAAEAAAABAAsAAgAKAAEAAQAEAAoAAgAJAAEABAADAAoAAgAKAAEAAwACAAoAAgAKAAEAAgABAAoAAgAKAAEAAQAbAAsAAgAKAAEAAgAcAAsAAgAKAAEAAwAdAAsAAgAKAAEAAgAaAAsAAgALAAEACAAaAAoAAgAJAAEAAAAbAAoAAgAKAAEAAAAcAAoAAgAKAAEAAQAdAAoAAgAKAAEAAAAdAAkAAgAKAAIABAAcAAkAAgAKAAAAAAAbAAkAAgAKAAAACAAaAAkAAgAJAAIAAgAEAAkAAgAJAAAAAQADAAkAAgAKAAIABAACAAkAAgAKAAIAAwABAAkAAgAKAAAACAAdABAAAgAJAAEAAwANAAkAAgALAAEABwANAAoAAgAFAAEAAAAOAAoAAgABAAMAAAAPAAoAAgABAAMAAgAQAAoAAgABAAMAAgARAAoAAgABAAMAAwASAAoAAgAGAAAAAgASAAkAAgALAAEABgATAAkAAgAJAAEAAgATAAoAAgAJAAIAAQAMAAkAAgAJAAEAAAAMAAoAAgAJAAIAAAA=")
tile_set = ExtResource("1_exbw0")

[node name="SpikeIntervalTimer" type="Timer" parent="."]
one_shot = true

[node name="PlatformIntervalTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="RabbitIntervalTimer" type="Timer" parent="."]
one_shot = true

[node name="Stage1BG" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Stage1BG"]
position = Vector2(589, 831)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_ipfqr")

[node name="Sprite2D2" type="Sprite2D" parent="Stage1BG"]
position = Vector2(1434, 499)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_ipfqr")

[node name="Sprite2D3" type="Sprite2D" parent="Stage1BG"]
position = Vector2(428, 427)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_ipfqr")

[node name="Sprite2D4" type="Sprite2D" parent="Stage1BG"]
position = Vector2(695, 534)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_ipfqr")

[node name="Sprite2D5" type="Sprite2D" parent="Stage1BG"]
position = Vector2(1274, 812)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_ipfqr")

[node name="Stage2BG" type="Node2D" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Stage2BG"]
position = Vector2(1562, 849)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_ipfqr")

[node name="Sprite2D2" type="Sprite2D" parent="Stage2BG"]
position = Vector2(1533, 652)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_ipfqr")

[node name="Sprite2D3" type="Sprite2D" parent="Stage2BG"]
position = Vector2(497, 634)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_ipfqr")

[node name="Sprite2D4" type="Sprite2D" parent="Stage2BG"]
position = Vector2(850, 853)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_ipfqr")

[node name="Sprite2D5" type="Sprite2D" parent="Stage2BG"]
position = Vector2(1659, 358)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_ipfqr")

[node name="Stage3BG" type="Node2D" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Stage3BG"]
position = Vector2(1343, 383)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_ipfqr")

[node name="Sprite2D2" type="Sprite2D" parent="Stage3BG"]
position = Vector2(452, 862)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_ipfqr")

[node name="Sprite2D3" type="Sprite2D" parent="Stage3BG"]
position = Vector2(1666, 523)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_ipfqr")

[node name="Sprite2D4" type="Sprite2D" parent="Stage3BG"]
position = Vector2(1378, 656)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_ipfqr")

[node name="Sprite2D5" type="Sprite2D" parent="Stage3BG"]
position = Vector2(1144, 886)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_ipfqr")

[node name="Sprite2D6" type="Sprite2D" parent="Stage3BG"]
position = Vector2(598, 441)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_ipfqr")

[connection signal="timeout" from="SpikeIntervalTimer" to="." method="_on_spike_interval_timer_timeout"]
[connection signal="timeout" from="PlatformIntervalTimer" to="." method="_on_platform_interval_timer_timeout"]
[connection signal="timeout" from="RabbitIntervalTimer" to="." method="_on_rabbit_interval_timer_timeout"]
